fix churn notebook typos

--- a/dqn-churnSim.html
+++ b/dqn-churnSim.html
@@ -13194,12 +13194,12 @@ _S4_: price_mention (Price Issues Discussed)
 
 
 </code></pre>
-<p>We consider 5 <strong>actions</strong> for all customers:</p>
+<p>We consider 4 <strong>actions</strong> for all customers:</p>
 
 <pre><code>a = 0: do nothing
-a = 1: if price_metnion&gt;0, then reduce the price 10 %. This will lead to 20% reduction in churn
-a = 2: if price_metnion&gt;0, then reduce the price 20 %. This will lead to 40% reduction in churn
-a = 3: if price_metnion&gt;0, then reduce the price 30 %. This will lead to 50% reduction in churn</code></pre>
+a = 1: if price_mention&gt;0, then reduce the price 10 %. This will lead to 20% reduction in churn
+a = 2: if price_mention&gt;0, then reduce the price 20 %. This will lead to 40% reduction in churn
+a = 3: if price_mention&gt;0, then reduce the price 30 %. This will lead to 50% reduction in churn</code></pre>
 
 </div>
 </div>
